# libmdns

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml  zeroconf_test.yaml
examples/: register.rs  register_with_ip_list.rs  zeroconf_test.py
src/: address_family.rs  fsm.rs  lib.rs  net.rs  netwin.rs  services.rs
src/dns_parser/: .mod.rs.swp  .structs.rs.swp  builder.rs  enums.rs  error.rs  header.rs  mod.rs  name.rs  parser.rs  rrdata.rs  structs.rs
src/host/: default_host_data.rs  fixed_host_data.rs  host_data.rs  mod.rs
