[package]
name = "libmdns"
version = "0.8.0"
authors = ["Will Stott <willstott101+libmdns@gmail.com>"]

description = "mDNS Responder library for building discoverable LAN services in Rust"
repository = "https://github.com/librespot-org/libmdns"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
byteorder = "1.5"
if-addrs = "0.12.0"
hostname = "0.4.0"
log = "0.4"
multimap = "0.10.0"
rand = "0.8"
futures-util = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync", "net", "rt"] }
socket2 = { version = "0.5", features = ["all"] }
local-ip-address = "0.6.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["netioapi"] }

[target.'cfg(not(windows))'.dependencies]
nix = { version = "0.28", features = ["net"] }

[dev-dependencies]
env_logger = { version = "0.11.3", default-features = false, features = [
  "color",
  "humantime",
  "auto-color",
] }
